# fish-experiment

./: .gitignore  ExperimentTool.desktop  README.md  Trial_DesktopGui.py  compileForBASLER.sh  compileForDALSA.sh  my_gui.py
glade_docs/: myapp.glade  myappOLD.glade
src/rectrial/: CMakeLists.txt  package.xml
src/rectrial/data/: experiment_log.csv  positions.csv  positions_2min.csv
src/rectrial/include/: ImageEventPrinter.h
src/rectrial/launch/: launch_gui.launch  launch_pub.launch  launch_pub_projector.launch  launch_track.launch  launch_webcam.launch  start.launch
src/rectrial/msg/: pub_data.msg
src/rectrial/scripts/: GLWindow.cpp  HelloEposCmd.cpp  adaptive_filter.cpp  adaptive_filter.h  camera_node.cpp  compare.txt  csv_writer.cpp  epos_node.cpp  experiment_controller.cpp  genicamHighPriority.sh  main_node.cpp  my_gui.py  real_time_tracker.cpp  rec_node.cpp  refuge_tracker.cpp  throttler_node.cpp
src/rectrial/scripts/epos_lib/: Makefile  eposSin.cpp
src/rectrial/scripts/gl/src/: glad.c
src/retrical/: CMakeLists.txt  package.xml
src/retrical/launch/: launch_gui.launch  launch_pub.launch  launch_track.launch  start.launch
src/retrical/msg/: pub_data.msg
src/retrical/scripts/: GLWindow.h  HelloEposCmd.cpp  camera_node.cpp  dummy_test.cpp  experiment_controller.cpp  main_node.cpp  real_time_tracker.cpp
src/retrical/scripts/epos_lib/: eposSin2.cpp  epos_lib.cpp  epos_lib.h
src/retrical/scripts/gl/include/glad/: glad.h
